--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss-watch": "sass --watch --no-source-map scss:css",
-    "scss-build": "sass --no-source-map scss:css"
+    "scss-build": "sass --no-source-map scss:css",
+    "css-min": "css-minify -d css -o css"
   },
   "devDependencies": {
     "bulma": "^0.9.1"
