--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss-watch": "sass --watch --no-source-map scss:css",
-    "scss-build": "sass --no-source-map scss:css",
-    "css-min": "css-minify -d css -o css"
+    "scss-watch": "sass --watch --no-source-map scss:css -s compressed",
+    "scss-build": "sass --no-source-map scss:css -s compressed"
   },
   "devDependencies": {
     "bulma": "^0.9.1"
